kubernetes/kafka/base/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  replicas: 1 
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: docker.io/bitnami/kafka:3.5
        ports:
        - containerPort: 9092
        - containerPort: 9093
        volumeMounts:
        - name: kafka-data
          mountPath: /bitnami
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-data
