kubernetes/kafka/base/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  type: NodePort    
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  - name: broker  
    port: 9093
    targetPort: 9093  
  selector:
    app: kafka
