kubernetes/kafka/base/kafka-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 91.207.126.100"
spec:
  rules:
  - host: kafka.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka
            port:
              number: 8500
  tls:
  - hosts:
    - kafka.omni-rs.com
    secretName: omni-rs-com-tls-sub
